# Docker-FastAPI-demo

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: task.py
api/schemas/: task.py
tests/: test_main.py
